# shitaku-ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bed33b016f83_initial_migration.py
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: users.py
backend/app/crud/: user.py
backend/app/models/: user.py
backend/src/: config.py  main.py
backend/src/application/use_cases/: agenda_use_cases.py  agent_use_cases.py  calendar_use_cases.py  dictionary_use_cases.py  google_auth_use_cases.py  knowledge_use_cases.py  meeting_note_use_cases.py  slack_use_cases.py  transcript_use_cases.py
backend/src/domain/entities/: __init__.py  agenda.py  agent.py  dictionary_entry.py  generated_agenda.py  google_integration.py  knowledge.py  meeting_note.py  meeting_transcript.py  oauth_state.py  recurring_meeting.py  slack_integration.py  user.py
backend/src/domain/repositories/: __init__.py  agenda_repository.py  agent_repository.py  dictionary_repository.py  google_integration_repository.py  knowledge_repository.py  meeting_note_repository.py  meeting_transcript_repository.py  oauth_state_repository.py  recurring_meeting_repository.py  slack_integration_repository.py  user_repository.py
backend/src/domain/services/: matching_algorithm.py  normalization_service.py  recurring_meeting_filter.py  transcript_parser.py
backend/src/infrastructure/database/: session.py
backend/src/infrastructure/database/models/: __init__.py  user.py
backend/src/infrastructure/repositories/: __init__.py  agenda_repository_impl.py  agent_repository_impl.py  dictionary_repository_impl.py  google_integration_repository_impl.py  knowledge_repository_impl.py  meeting_note_repository_impl.py  meeting_transcript_repository_impl.py  oauth_state_repository_impl.py  recurring_meeting_repository_impl.py  slack_integration_repository_impl.py  user_repository.py
backend/src/infrastructure/services/: agenda_generation_service.py  normalization_service_impl.py
backend/src/presentation/api/v1/: __init__.py  dependencies.py  router.py
backend/src/presentation/schemas/: __init__.py  agenda.py  agent.py  dictionary.py  google.py  health.py  knowledge.py  meeting_note.py  slack.py  transcript.py  user.py
backend/tests/: conftest.py
backend/tests/application/use_cases/: test_agenda_use_cases.py  test_calendar_use_cases.py  test_google_auth_use_cases.py
backend/tests/domain/entities/: test_agenda.py  test_agent.py  test_dictionary_entry.py  test_google_integration.py  test_knowledge.py  test_meeting_note.py  test_slack_integration.py
backend/tests/domain/repositories/: test_google_integration_repository.py
backend/tests/domain/services/: test_normalization_service.py
backend/tests/e2e/: __init__.py  test_agenda_generation_flow.py
backend/tests/infrastructure/repositories/: test_google_integration_repository_impl.py  test_meeting_transcript_repository_impl.py  test_recurring_meeting_repository_impl.py
backend/tests/infrastructure/services/: test_agenda_generation_service.py  test_normalization_service_impl.py
backend/tests/integration/: test_agendas.py  test_agent_reference_settings.py  test_agents.py  test_dictionary.py  test_google.py  test_knowledge.py  test_meeting_notes.py  test_recurring_meetings_api.py  test_slack.py  test_transcripts.py  test_users.py
backend/tests/presentation/api/v1/: test_dependencies.py
backend/tests/unit/: test_health.py  test_matching_algorithm.py  test_recurring_meeting_filter.py  test_transcript_parser.py  test_transcript_use_cases.py
backend/tests/unit/domain/entities/: test_recurring_meeting.py
backend/tests/unit/infrastructure/repositories/: __init__.py  test_agent_repository_impl.py
(+179 files in other folders)
