[project]
name = "backend"
version = "1.0.0"
description = "FastAPI Backend for Boilerplate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "bcrypt>=5.0.0",
    "supabase>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=46.0.4",
    "slack-sdk>=3.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "SIM", "ANN", "D", "S", "T20", "TID", "C901", "PTH", "PERF", "RET"]
ignore = [
    "B008",   # Allow Depends() in FastAPI function defaults
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.environ".msg = "Use pydantic-settings instead"
"os.getenv".msg = "Use pydantic-settings instead"

[tool.ty.rules]
# Starlette add_middleware との互換性問題（ty が対応したら再有効化）
# ref: https://github.com/encode/starlette/discussions/2423
invalid-argument-type = "ignore"
# mypyとの互換性のためtype: ignoreコメントを許可
unused-ignore-comment = "ignore"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
